<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_user_repo_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintBottom_toTopOf="@id/card_user_repo_input"
        tools:text="@string/text_user_repo_input" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_user_repo_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="25dp"
            android:paddingVertical="25dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_repo_owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_user_input_repo_owner_name"
                app:boxBackgroundColor="@color/ash"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_txt_repo_owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="start|center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_repo_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/text_user_input_repo_name"
                app:boxBackgroundColor="@color/ash"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintTop_toBottomOf="@id/txt_layout_repo_owner_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_txt_repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="start|center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_pull_requests_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/text_user_input_pull_requests_state"
                app:boxBackgroundColor="@color/ash"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintTop_toBottomOf="@id/txt_layout_repo_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_txt_pull_requests_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="start|center_vertical"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_gray_btn"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/text_btn_search"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_layout_pull_requests_state" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>